backend/billing/billing-api/k8/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: billing-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
      labels:
        app: billing-api
        team: billing
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - image: insightio/billing-api
          imagePullPolicy: Always
          name: billing-api
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 400Mi
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
      tolerations:
        - key: 'arm'
          operator: 'Equal'
          value: 'true'
          effect: 'NoExecute'
