backend/billing/billing-api/k8/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: billing-api
spec:
  type: ClusterIP
  selector:
    app: billing-api
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
